[gd_scene load_steps=4 format=2]

[ext_resource path="res://Gai.gd" type="Script" id=1]
[ext_resource path="res://DoHoa/Enemy/Gai/thorns1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.195, 7.75476 )

[node name="Gai" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Gai_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Gai_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
